购物车多种实现方式： 1.RecyclerView嵌套RecyclerView---GwcActivity 2.RecyclerView嵌套ListView---MainActivty 3.单独一个RecyclerView---ShopActivity

--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -44,7 +44,8 @@
         <com.qichang.hfydemo.demo.widget.LinearLayoutForListView
             android:id="@+id/listview_cart"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:divider="@null" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
