--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:focusable="true"
-    android:focusableInTouchMode="true">
+    android:focusableInTouchMode="true"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/ll_Top"
@@ -40,9 +40,9 @@
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:fastScrollEnabled="false"
         android:layout_weight="1"
-        android:background="@color/color_view" />
+        android:background="@color/color_view"
+        android:fastScrollEnabled="false" />
 
     <LinearLayout
         android:id="@+id/ll_pay"
@@ -51,12 +51,13 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <TextView
+        <CheckBox
             android:id="@+id/tv_all_select"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp10"
-            android:drawableLeft="@drawable/shopcart_unselected"
+            android:background="@drawable/checkbox_payment"
+            android:button="@android:color/transparent"
             android:drawablePadding="@dimen/dp5"
             android:text="全选" />
 
