--- a/app/src/main/res/layout/item_cloth.xml
+++ b/app/src/main/res/layout/item_cloth.xml
@@ -11,15 +11,14 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <ImageView
+        <CheckBox
             android:id="@+id/img_cloth_select"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/dp20"
-            android:paddingTop="@dimen/dp10"
-            android:paddingRight="@dimen/dp20"
-            android:paddingBottom="@dimen/dp10"
-            android:src="@drawable/shopcart_selected" />
+            android:layout_width="@dimen/dp23"
+            android:layout_height="@dimen/dp23"
+            android:layout_marginLeft="@dimen/dp20"
+            android:layout_marginRight="@dimen/dp20"
+            android:background="@drawable/checkbox_payment"
+            android:button="@android:color/transparent" />
 
         <ImageView
             android:id="@+id/img"
@@ -62,8 +61,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/dp10"
-        android:gravity="right|center_vertical">
+        android:gravity="right|center_vertical"
+        android:paddingBottom="@dimen/dp10">
 
         <TextView
             android:id="@+id/tv_price"
