--- a/app/src/main/res/layout/item_shop.xml
+++ b/app/src/main/res/layout/item_shop.xml
@@ -5,9 +5,9 @@
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/dp10"
     android:background="@drawable/shape_bg"
-    android:orientation="vertical"
     android:focusable="true"
-    android:focusableInTouchMode="true">
+    android:focusableInTouchMode="true"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/ll_Top"
@@ -16,15 +16,14 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <ImageView
+        <CheckBox
             android:id="@+id/img_shop_select"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/dp20"
-            android:paddingTop="@dimen/dp10"
-            android:paddingRight="@dimen/dp20"
-            android:paddingBottom="@dimen/dp10"
-            android:src="@drawable/shopcart_selected" />
+            android:layout_width="@dimen/dp25"
+            android:layout_height="@dimen/dp25"
+            android:layout_marginLeft="@dimen/dp15"
+            android:layout_marginRight="@dimen/dp15"
+            android:background="@drawable/checkbox_payment"
+            android:button="@android:color/transparent" />
 
         <TextView
             android:id="@+id/tv_shop_name"
