--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="购物车（13）"
+            android:text="购物车"
             android:textColor="#FFFFFF"
             android:textSize="@dimen/dp18" />
 
@@ -36,35 +36,72 @@
             android:textSize="@dimen/dp15" />
     </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/color_view"
-        android:fastScrollEnabled="false" />
+        android:overScrollMode="never">
 
-    <LinearLayout
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@color/color_view"
+            android:fastScrollEnabled="false"
+            android:overScrollMode="never" />
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
+    <RelativeLayout
         android:id="@+id/ll_pay"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
+        android:layout_height="@dimen/dp65"
         android:orientation="horizontal">
-
-        <CheckBox
-            android:id="@+id/tv_all_select"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp10"
-            android:background="@drawable/checkbox_payment"
-            android:button="@android:color/transparent"
-            android:drawablePadding="@dimen/dp5"
-            android:text="全选" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/tv_all_select"
+                android:layout_width="@dimen/dp30"
+                android:layout_height="@dimen/dp30"
+                android:layout_margin="@dimen/dp10"
+                android:background="@drawable/checkbox_payment"
+                android:button="@android:color/transparent"
+                android:drawablePadding="@dimen/dp5" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="全选"
+                android:textColor="@color/black"
+                android:textSize="@dimen/dp16" />
+        </LinearLayout>
+
+
+        <Button
+            android:id="@+id/pay_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="right"
+            android:background="@color/color_ff0101"
+            android:text="删除"
+            android:textColor="#ffffff"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:id="@+id/pay_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/tv_submit"
             android:gravity="right"
             android:orientation="vertical"
             android:paddingRight="@dimen/dp15">
@@ -75,7 +112,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/dp10"
                 android:paddingTop="@dimen/dp10"
-                android:text="总价：¥0"
+                android:text="总价：¥ 0.0"
                 android:textColor="@color/colorAccent"
                 android:textSize="@dimen/dp16" />
 
@@ -94,6 +131,8 @@
             android:id="@+id/tv_submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
             android:layout_marginRight="@dimen/dp10"
             android:background="@drawable/login_btn"
             android:paddingLeft="@dimen/dp30"
@@ -103,6 +142,6 @@
             android:text="去结算"
             android:textColor="#FFFFFF" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
