--- a/app/src/main/res/layout/item_cloth.xml
+++ b/app/src/main/res/layout/item_cloth.xml
@@ -1,103 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.mcxtzhang.swipemenulib.SwipeMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp100"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <CheckBox
-            android:id="@+id/img_cloth_select"
-            android:layout_width="@dimen/dp23"
-            android:layout_height="@dimen/dp23"
-            android:layout_marginLeft="@dimen/dp20"
-            android:layout_marginRight="@dimen/dp20"
-            android:background="@drawable/checkbox_payment"
-            android:button="@android:color/transparent" />
-
-        <ImageView
-            android:id="@+id/img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/small_zwimg" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tv_cloth_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:lines="2"
-                android:paddingLeft="@dimen/dp15"
-                android:paddingTop="@dimen/dp12"
-                android:paddingRight="@dimen/dp15"
-                android:textColor="@color/black"
-                android:textSize="@dimen/dp14"
-                tools:text="商品名称商品名称商品名称商商品名称商品名称商品名称品名称商品名称" />
-
-            <TextView
-                android:id="@+id/tv_style"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_cloth_name"
-                android:ellipsize="end"
-                android:lines="2"
-                android:paddingLeft="@dimen/dp15"
-                android:paddingTop="@dimen/dp10"
-                android:paddingRight="@dimen/dp15"
-                tools:text="黑色;XS" />
-        </RelativeLayout>
-    </LinearLayout>
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right|center_vertical"
-        android:paddingBottom="@dimen/dp10">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_ff0101"
-            android:textSize="@dimen/dp20"
-            tools:text="￥ 79" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp100"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/img_cloth_minus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/dp20"
-            android:src="@drawable/shopcart_minus_grey" />
+            <CheckBox
+                android:id="@+id/img_cloth_select"
+                android:layout_width="@dimen/dp23"
+                android:layout_height="@dimen/dp23"
+                android:layout_marginLeft="@dimen/dp20"
+                android:layout_marginRight="@dimen/dp20"
+                android:background="@drawable/checkbox_payment"
+                android:button="@android:color/transparent" />
 
-        <TextView
-            android:id="@+id/tv_cloth_num"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp5"
-            android:layout_marginRight="@dimen/dp5"
-            android:background="@drawable/shopcart_add_btn"
-            android:paddingLeft="@dimen/dp20"
-            android:paddingTop="@dimen/dp2"
-            android:paddingRight="@dimen/dp20"
-            android:paddingBottom="@dimen/dp2"
-            android:text="1" />
+            <ImageView
+                android:id="@+id/img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/small_zwimg" />
 
-        <ImageView
-            android:id="@+id/img_cloth_add"
-            android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_cloth_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:lines="2"
+                    android:paddingLeft="@dimen/dp15"
+                    android:paddingTop="@dimen/dp12"
+                    android:paddingRight="@dimen/dp15"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/dp14"
+                    tools:text="商品名称商品名称商品名称商商品名称商品名称商品名称品名称商品名称" />
+
+                <TextView
+                    android:id="@+id/tv_style"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_cloth_name"
+                    android:ellipsize="end"
+                    android:lines="2"
+                    android:paddingLeft="@dimen/dp15"
+                    android:paddingTop="@dimen/dp10"
+                    android:paddingRight="@dimen/dp15"
+                    tools:text="黑色;XS" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingRight="@dimen/dp20"
-            android:src="@drawable/shopcart_add_red" />
+            android:gravity="right|center_vertical"
+            android:paddingBottom="@dimen/dp10">
+
+            <TextView
+                android:id="@+id/tv_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_ff0101"
+                android:textSize="@dimen/dp20"
+                tools:text="￥ 79" />
+
+            <ImageView
+                android:id="@+id/img_cloth_minus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/dp20"
+                android:src="@drawable/shopcart_minus_grey" />
+
+            <TextView
+                android:id="@+id/tv_cloth_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp5"
+                android:layout_marginRight="@dimen/dp5"
+                android:background="@drawable/shopcart_add_btn"
+                android:paddingLeft="@dimen/dp20"
+                android:paddingTop="@dimen/dp2"
+                android:paddingRight="@dimen/dp20"
+                android:paddingBottom="@dimen/dp2"
+                android:text="1" />
+
+            <ImageView
+                android:id="@+id/img_cloth_add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="@dimen/dp20"
+                android:src="@drawable/shopcart_add_red" />
+
+        </LinearLayout>
 
     </LinearLayout>
-</LinearLayout>
+
+    <Button
+        android:id="@+id/Delete"
+        android:layout_width="60dp"
+        android:layout_height="match_parent"
+        android:background="@color/color_ff0101"
+        android:text="删除"
+        android:textColor="@android:color/white" />
+</com.mcxtzhang.swipemenulib.SwipeMenuLayout>
